[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsequeue"
version = "0.1.0"
description = "Async job processing REST API service with retry, timeout, metrics, and dashboard"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "croniter>=2.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that exercise multiple components or an external database",
    "postgres: tests that require POSTGRES_TEST_URL",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75

[tool.setuptools.packages.find]
include = ["app*"]
